Add slider property
